Breathe: Prevent overlap of handbook name and dropdown action toggle.
git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13480 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -1142,7 +1142,7 @@ article.page p.contributor-name {
 	color: #aaa;
 	margin-top: 1em;
 	margin-left: 25px;
-	margin-right: 35px;
+	margin-right: 55px;
 	overflow: hidden;
 	letter-spacing: 2px;
 	line-height: 1.1em;
